1.9.1 /
[Alexandr Topilski]
- [SSDB] Auth command

1.9.0 / October 2, 2017
[Alexandr Topilski]
- [LMDB] Support single file db
- Ui improvements

1.8.2 / September 27, 2017
[Alexandr Topilski]
- Move web links into "Help" menu #69
- [Windows] Processor featuring BMI2 extensions required #45
- FastoNoSQL silently fails to launch, because it mistakenly assumes my CPU supports AVX #29
- The Windows Error Reporting GUI fails to appear when FastoNoSQL crashes #28

1.8.1 / September 19, 2017
[Alexandr Topilski]
- [Redis] CONFIG GET does not work #43

1.8.0 / September 15, 2017
[Alexandr Topilski]
- [Redis] SSL connection (Azure service)
- [Redis] Crash on ubuntu 16.04 when running transaction on Redis #42

1.7.1 / August 17, 2017
[Alexandr Topilski]
- [SSDB] Fix SCAN command
- Bug fixes

1.7.0 / August 15, 2017
[Alexandr Topilski]
- [RocksDB] Comparator option
- [LevelDB] Comparator option (IndexedDB comparator)
- Binary keys support
- Multi selection in explorer tree
- Fix Export/Import settings

1.6.1 / August 5, 2017
[Alexandr Topilski]
- Https server for fastonosql.com
- External libs info

1.6.0 / Jule 31, 2017
[Alexandr Topilski]
- [Memcached, SSDB] Can't save connection setting for memcached. #31
- [Redis] Added BITFIELD command
- [LevelDB] Update sources to version 1.20
- [LMDB] Update sources to version 0.9.70
- [RocksDB] Update sources to version 5.7.0
- [SSDB] Update sources to version 1.9.4
- [UpscaleDB] Update sources to version 2.2.1
- Snappy view
- ForestDB support
- #26 Different JsonFormat for better readable json
- #68 Don't show "Check version" modal on every start
- #71 Bug: Crashes on windows if key doesn't exist
- Update QScintilla to version 2.10.1
- Update libssh2 sources to version 1.8.1 dev

1.5.1 / May 18, 2017
[Alexandr Topilski]
- Bug fixes

1.5.0 / Fabruary 2, 2017
[Alexandr Topilski]
- [Redis] Pub/Sub dialog
- [Redis] DECR UI handling
- [Redis] DECRBY UI handling
- [Memcached] INCR UI handling
- [Memcached] DECR UI handling