@@ -446,8 +446,9 @@ void IServer::HandleExecuteEvent(events::ExecuteResponceEvent* ev) {
   auto v = ev->value();
   common::Error err(v.errorInfo());
   if (err) {
-    LOG_ERROR(err, err->GetErrorCode() == common::COMMON_EINTR ? common::logging::LOG_LEVEL_WARNING
-                                                               : common::logging::LOG_LEVEL_ERR,
+    LOG_ERROR(err,
+              err->GetErrorCode() == common::COMMON_EINTR ? common::logging::LOG_LEVEL_WARNING
+                                                          : common::logging::LOG_LEVEL_ERR,
               true);
   }
 
@@ -483,6 +484,10 @@ void IServer::HandleCreateDatabaseResponceEvent(events::CreateDatabaseResponceEv
   if (err) {
     LOG_ERROR(err, common::logging::LOG_LEVEL_ERR, true);
   } else {
+    database_t dbs = FindDatabase(v.db);
+    if (!dbs) {
+      databases_.push_back(v.db);
+    }
   }
 
   emit CreateDatabaseFinished(v);
