@@ -1,6 +1,7 @@
 1.9.1 /
 [Alexandr Topilski]
 - [SSDB] Auth command
+- [LMDB] Create database
 
 1.9.0 / October 2, 2017
 [Alexandr Topilski]
